tests/saws/fixtures/valid/01_basic_table.saws
name,age,active
"Alice",30,true
"Bob",25,false
"Charlie",40,true
