tests/saws/fixtures/invalid/03_empty_cell.saws
name,age,active
"Alice",,true
